<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalendarActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendarView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="88dp"
        android:text="@string/button_groupChat" />

    <Button
        android:id="@+id/button_eventDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_chat"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="-190dp"
        android:text="@string/button_eventDisplay" />

    <TextView
        android:id="@+id/tv_scheduleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_eventDisplay"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="-100dp"
        android:text="@string/tv_scheduleDisplay"
        android:textSize="16sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_alarm"
        android:layout_width="129dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="649dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_alarm" />

</RelativeLayout>